adding footer section

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -24,9 +24,8 @@
 </head>
 
 <body class="relative bodyy">
-    <div
-        class="bg-transxlS hidden z-20 badge absolute w-full h-full top-0 left-0 transition-all ease-in-out duration-700 ">
-        <div class="absolute top-[88%] z-50 left-[25%] gallery  w-[50%]  h-[455px] ">
+    <div class="bg-transxlS z-20 badge hidden absolute w-full h-full top-0 left-0  ">
+        <div class="absolute top-[71%] z-50 left-[25%] gallery  w-[50%]  h-[455px] ">
             <div
                 class="w-full h-[94%]  flex justify-between  transition-all ease-in-out duration-700   bg-[url(./images/gallery_img11.jpg)] bman bg-center bg-cover ">
                 <span class="arrowss z-50 relative  arrLeftt cursor-pointer w-1/2 h-full ">
@@ -1277,7 +1276,7 @@
     </div>
 
     <!-- Banner 9 -->
-    <div class="bg-banner9 py-5">
+    <div class="bg-header  py-12">
         <div class="pchild flex flex-col justify-center items-center gap-6 py-3 md:py-[1.8rem] ">
 
             <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
@@ -1292,52 +1291,148 @@
 
         </div>
 
-        <div class="relative px-12">
-            <div class="h-[450px] w-full bg-yellow-200">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31711.116448527788!2d3.2899194!3d6.535629999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1726218912451!5m2!1sen!2sng"
-                    style="border:0;" allowfullscreen="" loading="lazy" class="frame w-full h-full"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div class="flex flex-col md:flex-row justify-center item-center">
+
+        <div class="h-[450px] w-full">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31711.116448527788!2d3.2899194!3d6.535629999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1726218912451!5m2!1sen!2sng"
+                style="border:0;" allowfullscreen="" loading="lazy" class="frame w-full h-full"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="flex flex-col md:flex-row justify-center item-center py-0 md:py-12  gap-10 px-4 md:px-12">
 
 
-                <div class="mapb amap w-[45%] h-[762px] bg-red-400 px-4">
+            <div
+                class="mapb amap relative flex flex-col justify-center items-center w-full md:w-[44%] h-[620px] md:h-[810px] py-6 ">
+                <div
+                    class="contact bcont absolute flex flex-col gap-14 py-10  top-[-30%] left-[3%] w-[94%] px-10 bg-header">
 
-                </div>
-                <div class="mapb bmap w-[55%]  bg-blue-400 p-8">
-                    <form class="bg-header h-[524px] w-full p-10 ">
-                        <p class="uppercase">Get in touch</p>
-
-                        <div class="flex flex-col gap-5 mt-14  ">
-                            <div>
-                                <input class="collect h-[38px]" type="text" name="" placeholder="Enter your email adress" id="">
-                            </div>
-                            <div>
-                                <input class="collect h-[38px]" type="text" name="" placeholder="Enter your email name" id="">
-                            </div>
-                            <div>
-                                <textarea class="collect h-[116px]" name="" placeholder="Enter your email message" id=""></textarea>
-                            </div>
+                    <p class="uppercase uppercasee text-headerBtnText text-center">Information</p>
+                    <div class="coniconm">
+                        <span>
+                            <i class="fa-solid  doo text-[40px] text-headerBtnText fa-location-dot"></i>
+                        </span>
+                        <div>
+                            <p>Adress</p>
+                            <p class="contctt">Plot 1415 Adetokunbo Ademola Street, PMB 12724, Victoria Island, Lagos
+                                Nigeria</p>
                         </div>
-                       <div class="flex mt-4 gap-4 flex-col">
-                        <p>* All fields are mandatory.</p>
-                        <span class=" w-36 flex justify-center items-center p-2 h-8 bg-headerBtnText text-white  text-center">Send Message</span>
-                       </div>
-                    </form>
+                    </div>
+
+                    <div class="coniconm">
+                        <span class="">
+                            <i class="fa-solid doo  text-[40px] text-headerBtnText fa-phone"></i>
+                        </span>
+                        <div>
+                            <p>Phone / Fax</p>
+                            <p class="contctt">International Calls: +234 201 2772700, National Calls: 0201 2772700</p>
+                        </div>
+                    </div>
+
+                    <div class="coniconm">
+                        <span><i class="fa-solid doo  text-[40px] text-headerBtnText fa-envelope"></i></span>
+                        <div>
+                            <p>E-mail</p>
+                            <p class="contctt">sales@ekohotels.com, reservation@ekohotels.com, banquet@ekohotels.com</p>
+                        </div>
+                    </div>
                 </div>
 
+
+
+                <div class="contact absolute bottom-[2%] w-[94%] left-[3%] text-[66px]">
+                    <p class=" pl-0 md:pl-16 tcont">
+                        If you have
+                    </p>
+                    <p class="md:pl-16 pl-0 tcont">
+                        any
+                    </p>
+                    <p class="  tcont">
+                        questions don't hesitate
+                        to contact us.
+                    </p>
+                </div>
             </div>
+            <div class="mapb bcont bmap w-full md:w-[56%] h-[510px]  md:h-[560px] p-2 md:p-8 ">
+                <form class=" h-[524px] w-full p-2 md:p-10 ">
+                    <p class="uppercase uppercasee text-headerBtnText">Get in touch</p>
+
+                    <div class="flex flex-col gap-5 mt-[5rem]  ">
+                        <div>
+                            <input class="collect h-[38px]" type="text" name="" placeholder="Enter your email adress"
+                                id="">
+                        </div>
+                        <div>
+                            <input class="collect h-[38px]" type="text" name="" placeholder="Enter your email name"
+                                id="">
+                        </div>
+                        <div>
+                            <textarea class="collect p-3 h-[116px]" name="" placeholder="Enter your email message"
+                                id=""></textarea>
+                        </div>
+
+                    </div>
+                    <div class="flex mt-4 gap-4 flex-col">
+                        <p>* All fields are mandatory.</p>
+                        <span
+                            class=" w-[12rem] flex justify-center items-center h-[3rem] bg-headerBtnText text-white uppercase  noname  text-center">Send
+                            Message</span>
+                    </div>
+                </form>
+            </div>
+
         </div>
 
+
     </div>
 
-    <div class="flex text-5xl  mt-5 justify-center items-center bg-slate-500">
-        <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
+    <div class="bannr10 flex  bg-banner10 px-16 ">
+        <div class=" flex flex-col md:flex-row w-full justify-center item-center">
+            <div class="fota md:w-[30%] bg-red-800 w-full h-60">
+                <p class="flinks">
+                    Our Events
+                </p>
+                <p class="flinks">
+                    Our Hotels
+                </p>
+                <p class="flinks">
+                    Dining
+                </p>
+                <p class="flinks">
+                    Our Vision & Mission
+                </p>
+                <p class="flinks">
+                    Contact Us
+                </p>
+                <p class="flinks">
+                    Terms & Conditions
+                </p>
+            </div>
+            <div class="fota w-full md:w-[40%] bg-blue-600 h-60">
+                <p class="flinks">
+                    Dining
+                </p>
+                <p class="flinks">
+                    Our Vision & Mission
+                </p>
+                <p class="flinks">
+                    Contact Us
+                </p>
+                <p class="flinks">
+                    Terms & Conditions
+                </p>
+            </div>
+            <div class="fota md:w-[30%] bg-yellow-100 w-full h-60">
+                hhhh
+            </div>
+        </div>
     </div>
-    <br>
-    <br>
-    <br>
+
+
+
+
+
+
+
 
 
 
