--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -21,6 +21,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="relative bodyy">
@@ -1387,9 +1391,16 @@
 
     <div class="bannr10 flex  bg-banner10 px-16 ">
         <div class=" flex flex-col md:flex-row w-full justify-center item-center">
-            <div class="fota md:w-[30%] bg-red-800 w-full h-60">
+            <div class="fota md:w-[25%] bg-red-800 w-full text-white uppercase  py-3 flex flex-col gap-6">
+                <p class="flinks">
+                    About
+                </p>
+                <p class="flinks">
+                    Gallery
+                </p>
                 <p class="flinks">
                     Our Events
+
                 </p>
                 <p class="flinks">
                     Our Hotels
@@ -1407,22 +1418,49 @@
                     Terms & Conditions
                 </p>
             </div>
-            <div class="fota w-full md:w-[40%] bg-blue-600 h-60">
-                <p class="flinks">
-                    Dining
-                </p>
-                <p class="flinks">
-                    Our Vision & Mission
-                </p>
-                <p class="flinks">
-                    Contact Us
-                </p>
-                <p class="flinks">
-                    Terms & Conditions
-                </p>
+            <div class="flex flex-col gap-8  items-center md:w-[50%] w-full">
+                <img src="./images/logo-footer.png" class="bg-center bg-cover h-[112px] w-[100px]" alt="">
+                <div class="fota w-full text-white  gap-3 px-2 bg-blue-600 py-3 flex flex-col ">
+
+                    <div class="flinkss">
+                        <span>
+                            <i class="fa-solid fa-map-location-dot"></i>
+                        </span>
+                        <p>Plot 1415 Adetokunbo Ademola Street, PMB 12724, Victoria Island, Lagos Nigeria</p>
+                    </div>
+                    <div class="flinkss">
+                        <span>
+                            <i class="fa-solid  fa-phone"></i>
+                        </span>
+                        <p>International Calls: +234 201 2772700, National Calls: 0201 2772700</p>
+                    </div>
+                    <div class="flinkss">
+                        <span>
+                            <i class="fa-solid  fa-phone"></i>
+                        </span>
+                        <p>Fax: +234 1 2704071</p>
+                    </div>
+                    <div class="flinkss">
+                        <span>
+                            <i class="fa-solid doo fa-envelope"></i>
+                        </span>
+                        <p>sales@ekohotels.com, reservation@ekohotels.com, banquet@ekohotels.com</p>
+                    </div>
+
+                </div>
             </div>
-            <div class="fota md:w-[30%] bg-yellow-100 w-full h-60">
-                hhhh
+            <div class="fota md:w-[25%]  w-full h-60">
+                <div class="w-full text-white">
+                    <p class="uppercase uppercaseeF text-headerBtnText text-center">Newsletter</p>
+
+                    <p>Subscribe to our email newsletter to receive updates and news.</p>
+                    <div class="relative flex flex-col j">
+                        <input type="text" placeholder="Email adress " class="bg-banner10 h-[32px] w-[262.5px]">
+                        <span class="absolute bg-headerBtnText flex justify-center right-0 items-center p-2">
+                            <i class="fa-solid fa-paper-plane  text-white"></i>
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
