added CartCalculatore, Fabinocci, userProfile  and Calculator Project

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -1033,7 +1033,7 @@
                 </div>
                 <!--  -->
                 <div class="hidden md:block w-[24%]">
-                    <div class=" w-full bg-blue-300 h-[510px] flex justify-center items-center  Aflextchi  ">
+                    <div class=" w-full h-[510px] flex justify-center items-center  Aflextchi  ">
                         <p class="bigText -rotate-90 px-1 text-center text-headerBtnText uppercase">
                             Dining
                         </p>
@@ -1302,7 +1302,7 @@
                 style="border:0;" allowfullscreen="" loading="lazy" class="frame w-full h-full"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="flex flex-col md:flex-row justify-center item-center py-0 md:py-12  gap-10 px-4 md:px-12">
+        <div class="flex flex-col md:flex-row  justify-center item-center py-0 md:py-12  gap-10 px-4 md:px-12">
 
 
             <div
@@ -1388,10 +1388,11 @@
 
 
     </div>
+    <!-- *****************banner9 done****************** -->
 
-    <div class="bannr10 flex  bg-banner10 px-16 ">
-        <div class=" flex flex-col md:flex-row w-full justify-center item-center">
-            <div class="fota md:w-[25%] bg-red-800 w-full text-white uppercase  py-3 flex flex-col gap-6">
+    <div class="bannr10 flex flex-col gap-14 py-4  bg-banner10 px-3 md:px-16 ">
+        <div class=" flex flex-col md:flex-row gap-14 md:gap-0 w-full justify-center item-center">
+            <div class="fota md:order-1 order-2   md:w-[25%] w-full text-white uppercase  py-3 flex flex-col gap-6">
                 <p class="flinks">
                     About
                 </p>
@@ -1418,9 +1419,10 @@
                     Terms & Conditions
                 </p>
             </div>
-            <div class="flex flex-col gap-8  items-center md:w-[50%] w-full">
+
+            <div class="flex order-1 md:order-2  fota flex-col gap-8  items-center md:w-[50%] w-full">
                 <img src="./images/logo-footer.png" class="bg-center bg-cover h-[112px] w-[100px]" alt="">
-                <div class="fota w-full text-white  gap-3 px-2 bg-blue-600 py-3 flex flex-col ">
+                <div class=" w-full text-white  gap-5 px-2  py-3 flex flex-col ">
 
                     <div class="flinkss">
                         <span>
@@ -1449,18 +1451,53 @@
 
                 </div>
             </div>
-            <div class="fota md:w-[25%]  w-full h-60">
-                <div class="w-full text-white">
-                    <p class="uppercase uppercaseeF text-headerBtnText text-center">Newsletter</p>
 
+            <div class="fota order-3 md:order-3  md:w-[25%] p-4  w-full h-60 flex flex-col gap-5">
+                <div class="w-full text-white flex flex-col gap-3">
+                    <p class="uppercase uppercaseeF text-headerBtnText ">Newsletter</p>
                     <p>Subscribe to our email newsletter to receive updates and news.</p>
+                </div>
+
+                <div class="flex flex-col gap-9">
                     <div class="relative flex flex-col j">
-                        <input type="text" placeholder="Email adress " class="bg-banner10 h-[32px] w-[262.5px]">
-                        <span class="absolute bg-headerBtnText flex justify-center right-0 items-center p-2">
+                        <input type="text" placeholder="Email adress " class="dput bg-banner10 h-[33.5px] w-full">
+                        <span
+                            class="absolute bg-headerBtnText flex justify-center right-[1.2px] top-[0.5px] items-center p-2">
                             <i class="fa-solid fa-paper-plane  text-white"></i>
                         </span>
                     </div>
+
+                    <div class="flex w-full justify-center items-center gap-8 text-white">
+                        <span class="socials">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </span>
+                        <span class="socials">
+                            <i class="fa-brands fa-square-instagram"></i>
+                        </span>
+                        <span class="socials">
+                            <i class="fa-brands fa-twitter"></i>
+                        </span>
+                        <span class="socials">
+                            <i class="fa-brands fa-pinterest"></i>
+                        </span>
+                    </div>
                 </div>
+
+            </div>
+        </div>
+
+        <p class="w-full h-[1px] bg-hrbuttom">
+
+        </p>
+        <div class="w-full flex flex-col gap-3">
+            <div class="flex justify-center items-center">
+                <span
+                    class=" w-[12rem] flex justify-center items-center h-[3rem] bg-headerBtnText text-white uppercase  noname   text-center">the
+                    company</span>
+
+            </div>
+            <div class="flex justify-center items-center text-white">
+                <p>Copyright © 2019 Eko Hotels & Suites</p>
             </div>
         </div>
     </div>
